--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 # Database Configuration
-DB_HOST=localhost
+DB_HOST=devops-crud-db.c0vee6uskva4.us-east-1.rds.amazonaws.com
 DB_PORT=3306
-DB_USER=root
-DB_PASSWORD=your_password
-DB_NAME=devops_crud_db
+DB_USER=admin
+DB_PASSWORD=441935#Mysql
+DB_NAME=devops-crud-db
 
 # Application Settings
 PORT=3000
