add new jenkinsfile and fixed Delete button

--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,10 @@
 DB_HOST=devops-crud-db.c0vee6uskva4.us-east-1.rds.amazonaws.com
 DB_PORT=3306
 DB_USER=admin
-DB_PASSWORD=441935#Mysql
+DB_PASSWORD=441935mysql
 DB_NAME=devops-crud-db
 
 # Application Settings
 PORT=3000
 NODE_ENV=development
+
